realigned tracks and fixed padding

--- a/client/src/assets/css/Tracks.css
+++ b/client/src/assets/css/Tracks.css
@@ -1,6 +1,6 @@
 .Tracks {
   width: inherit;
-  padding: 100px 0;
+  padding-top: 100px;
   position: relative;
   background-color: #09111D;
 }
@@ -11,6 +11,7 @@
 }
 
 .Tracks .theme {
+  width: 200px;
   display: inline-block;
   margin: 40px 40px 0 40px;
 }
